--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   material_design_icons_flutter: ^7.0.7296
+  flutter_material_design_icons: ^1.1.7447
 
 dev_dependencies:
   flutter_test:
